4.0/_sources/sequencetools.rst.txt
.. |AideSequence| replace:: :class:`~hydpy.core.sequencetools.AideSequence`
.. |ConditionSequence.reset| replace:: :func:`~hydpy.core.sequencetools.ConditionSequence.reset`
.. |ConditionSequence| replace:: :class:`~hydpy.core.sequencetools.ConditionSequence`
.. |DefaultProperty| replace:: :class:`~hydpy.core.propertytools.DefaultProperty`
.. |Device| replace:: :class:`~hydpy.core.devicetools.Device`
.. |Double| replace:: :class:`~hydpy.cythons.autogen.pointerutils.Double`
.. |ELSModel| replace:: :class:`~hydpy.core.modeltools.ELSModel`
.. |Element| replace:: :class:`~hydpy.core.devicetools.Element`
.. |False| replace:: :const:`False`
.. |FastAccessIOSequence.close_files| replace:: :func:`~hydpy.core.sequencetools.FastAccessIOSequence.close_files`
.. |FastAccessIOSequence.load_data| replace:: :func:`~hydpy.core.sequencetools.FastAccessIOSequence.load_data`
.. |FastAccessIOSequence.open_files| replace:: :func:`~hydpy.core.sequencetools.FastAccessIOSequence.open_files`
.. |FastAccessIOSequence.save_data| replace:: :func:`~hydpy.core.sequencetools.FastAccessIOSequence.save_data`
.. |FastAccessIOSequence| replace:: :class:`~hydpy.core.sequencetools.FastAccessIOSequence`
.. |FastAccessLinkSequence.alloc| replace:: :func:`~hydpy.core.sequencetools.FastAccessLinkSequence.alloc`
.. |FastAccessLinkSequence.set_pointer0d| replace:: :func:`~hydpy.core.sequencetools.FastAccessLinkSequence.set_pointer0d`
.. |FastAccessOutputSequence.update_outputs| replace:: :func:`~hydpy.core.sequencetools.FastAccessOutputSequence.update_outputs`
.. |FastAccessOutputSequence| replace:: :class:`~hydpy.core.sequencetools.FastAccessOutputSequence`
.. |FastAccess| replace:: :class:`~hydpy.core.variabletools.FastAccess`
.. |FileManager.basepath| replace:: :const:`~hydpy.core.filetools.FileManager.basepath`
.. |FluxSequence.aggregation_ext| replace:: :attr:`~hydpy.core.sequencetools.FluxSequence.aggregation_ext`
.. |FluxSequence.dirpath_ext| replace:: :attr:`~hydpy.core.sequencetools.FluxSequence.dirpath_ext`
.. |FluxSequence.filetype_ext| replace:: :attr:`~hydpy.core.sequencetools.FluxSequence.filetype_ext`
.. |FluxSequence.shape| replace:: :const:`~hydpy.core.sequencetools.FluxSequence.shape`
.. |FluxSequence| replace:: :class:`~hydpy.core.sequencetools.FluxSequence`
.. |HydPy.conditions| replace:: :const:`~hydpy.core.hydpytools.HydPy.conditions`
.. |HydPy.load_conditions| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_conditions`
.. |HydPy.prepare_inputseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.prepare_inputseries`
.. |HydPy| replace:: :class:`~hydpy.core.hydpytools.HydPy`
.. |IOSequence.activate_disk| replace:: :func:`~hydpy.core.sequencetools.IOSequence.activate_disk`
.. |IOSequence.activate_ram| replace:: :func:`~hydpy.core.sequencetools.IOSequence.activate_ram`
.. |IOSequence.adjust_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.adjust_series`
.. |IOSequence.adjust_short_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.adjust_short_series`
.. |IOSequence.aggregate_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.aggregate_series`
.. |IOSequence.average_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.average_series`
.. |IOSequence.deactivate_disk| replace:: :func:`~hydpy.core.sequencetools.IOSequence.deactivate_disk`
.. |IOSequence.deactivate_ram| replace:: :func:`~hydpy.core.sequencetools.IOSequence.deactivate_ram`
.. |IOSequence.dirpath_int| replace:: :const:`~hydpy.core.sequencetools.IOSequence.dirpath_int`
.. |IOSequence.disk2ram| replace:: :func:`~hydpy.core.sequencetools.IOSequence.disk2ram`
.. |IOSequence.diskflag| replace:: :const:`~hydpy.core.sequencetools.IOSequence.diskflag`
.. |IOSequence.filename_ext| replace:: :const:`~hydpy.core.sequencetools.IOSequence.filename_ext`
.. |IOSequence.filename_int| replace:: :const:`~hydpy.core.sequencetools.IOSequence.filename_int`
.. |IOSequence.load_ext| replace:: :func:`~hydpy.core.sequencetools.IOSequence.load_ext`
.. |IOSequence.memoryflag| replace:: :const:`~hydpy.core.sequencetools.IOSequence.memoryflag`
.. |IOSequence.numericshape| replace:: :const:`~hydpy.core.sequencetools.IOSequence.numericshape`
.. |IOSequence.ram2disk| replace:: :func:`~hydpy.core.sequencetools.IOSequence.ram2disk`
.. |IOSequence.ramflag| replace:: :const:`~hydpy.core.sequencetools.IOSequence.ramflag`
.. |IOSequence.rawfilename| replace:: :const:`~hydpy.core.sequencetools.IOSequence.rawfilename`
.. |IOSequence.save_ext| replace:: :func:`~hydpy.core.sequencetools.IOSequence.save_ext`
.. |IOSequence.seriesshape| replace:: :const:`~hydpy.core.sequencetools.IOSequence.seriesshape`
.. |IOSequence.series| replace:: :const:`~hydpy.core.sequencetools.IOSequence.series`
.. |IOSequence.shape| replace:: :const:`~hydpy.core.sequencetools.IOSequence.shape`
.. |IOSequence.update_fastaccess| replace:: :func:`~hydpy.core.sequencetools.IOSequence.update_fastaccess`
.. |IOSequences.activate_disk| replace:: :func:`~hydpy.core.sequencetools.IOSequences.activate_disk`
.. |IOSequences.activate_ram| replace:: :func:`~hydpy.core.sequencetools.IOSequences.activate_ram`
.. |IOSequences.close_files| replace:: :func:`~hydpy.core.sequencetools.IOSequences.close_files`
.. |IOSequences.deactivate_disk| replace:: :func:`~hydpy.core.sequencetools.IOSequences.deactivate_disk`
.. |IOSequences.deactivate_ram| replace:: :func:`~hydpy.core.sequencetools.IOSequences.deactivate_ram`
.. |IOSequences.load_series| replace:: :func:`~hydpy.core.sequencetools.IOSequences.load_series`
.. |IOSequences.open_files| replace:: :func:`~hydpy.core.sequencetools.IOSequences.open_files`
.. |IOSequences.ram2disk| replace:: :func:`~hydpy.core.sequencetools.IOSequences.ram2disk`
.. |IOSequences| replace:: :class:`~hydpy.core.sequencetools.IOSequences`
.. |IOSequence| replace:: :class:`~hydpy.core.sequencetools.IOSequence`
.. |InfoArray| replace:: :class:`~hydpy.core.sequencetools.InfoArray`
.. |InputSequence.set_pointer| replace:: :func:`~hydpy.core.sequencetools.InputSequence.set_pointer`
.. |InputSequence| replace:: :class:`~hydpy.core.sequencetools.InputSequence`
.. |LinkSequence.set_pointer| replace:: :func:`~hydpy.core.sequencetools.LinkSequence.set_pointer`
.. |LinkSequence.shape| replace:: :const:`~hydpy.core.sequencetools.LinkSequence.shape`
.. |LinkSequence.value| replace:: :const:`~hydpy.core.sequencetools.LinkSequence.value`
.. |LinkSequence| replace:: :class:`~hydpy.core.sequencetools.LinkSequence`
.. |LogSequence| replace:: :class:`~hydpy.core.sequencetools.LogSequence`
.. |ModelIOSequences.load_data| replace:: :func:`~hydpy.core.sequencetools.ModelIOSequences.load_data`
.. |ModelIOSequences.save_data| replace:: :func:`~hydpy.core.sequencetools.ModelIOSequences.save_data`
.. |ModelSequences| replace:: :class:`~hydpy.core.sequencetools.ModelSequences`
.. |ModelSequence| replace:: :class:`~hydpy.core.sequencetools.ModelSequence`
.. |Model| replace:: :class:`~hydpy.core.modeltools.Model`
.. |Node.deploymode| replace:: :const:`~hydpy.core.devicetools.Node.deploymode`
.. |Node.variable| replace:: :const:`~hydpy.core.devicetools.Node.variable`
.. |NodeSequence.seriescomplete| replace:: :const:`~hydpy.core.sequencetools.NodeSequence.seriescomplete`
.. |NodeSequence.value| replace:: :const:`~hydpy.core.sequencetools.NodeSequence.value`
.. |NodeSequences| replace:: :class:`~hydpy.core.sequencetools.NodeSequences`
.. |NodeSequence| replace:: :class:`~hydpy.core.sequencetools.NodeSequence`
.. |Node| replace:: :class:`~hydpy.core.devicetools.Node`
.. |None| replace:: :const:`None`
.. |Obs.load_ext| replace:: :func:`~hydpy.core.sequencetools.Obs.load_ext`
.. |Obs| replace:: :class:`~hydpy.core.sequencetools.Obs`
.. |Options.checkseries| replace:: :const:`~hydpy.core.optiontools.Options.checkseries`
.. |Options.usedefaultvalues| replace:: :const:`~hydpy.core.optiontools.Options.usedefaultvalues`
.. |Options.warnmissingobsfile| replace:: :const:`~hydpy.core.optiontools.Options.warnmissingobsfile`
.. |Options.warnmissingsimfile| replace:: :const:`~hydpy.core.optiontools.Options.warnmissingsimfile`
.. |OutputSequence.outputflag| replace:: :const:`~hydpy.core.sequencetools.OutputSequence.outputflag`
.. |OutputSequence.set_pointer| replace:: :func:`~hydpy.core.sequencetools.OutputSequence.set_pointer`
.. |OutputSequence| replace:: :class:`~hydpy.core.sequencetools.OutputSequence`
.. |PDouble| replace:: :class:`~hydpy.cythons.autogen.pointerutils.PDouble`
.. |PPDouble| replace:: :class:`~hydpy.cythons.autogen.pointerutils.PPDouble`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |RuntimeError| replace:: :class:`RuntimeError`
.. |SequenceManager.fluxfiletype| replace:: :const:`~hydpy.core.filetools.SequenceManager.fluxfiletype`
.. |SequenceManager.inputfiletype| replace:: :const:`~hydpy.core.filetools.SequenceManager.inputfiletype`
.. |SequenceManager.load_file| replace:: :func:`~hydpy.core.filetools.SequenceManager.load_file`
.. |SequenceManager.nodefiletype| replace:: :const:`~hydpy.core.filetools.SequenceManager.nodefiletype`
.. |SequenceManager.save_file| replace:: :func:`~hydpy.core.filetools.SequenceManager.save_file`
.. |SequenceManager.statefiletype| replace:: :const:`~hydpy.core.filetools.SequenceManager.statefiletype`
.. |SequenceManager.tempdirpath| replace:: :const:`~hydpy.core.filetools.SequenceManager.tempdirpath`
.. |SequenceManager| replace:: :class:`~hydpy.core.filetools.SequenceManager`
.. |Sequence_.initinfo| replace:: :const:`~hydpy.core.sequencetools.Sequence_.initinfo`
.. |Sequence_| replace:: :class:`~hydpy.core.sequencetools.Sequence_`
.. |Sequences.activate_disk| replace:: :func:`~hydpy.core.sequencetools.Sequences.activate_disk`
.. |Sequences.activate_ram| replace:: :func:`~hydpy.core.sequencetools.Sequences.activate_ram`
.. |Sequences.conditionsequences| replace:: :const:`~hydpy.core.sequencetools.Sequences.conditionsequences`
.. |Sequences.deactivate_disk| replace:: :func:`~hydpy.core.sequencetools.Sequences.deactivate_disk`
.. |Sequences.deactivate_ram| replace:: :func:`~hydpy.core.sequencetools.Sequences.deactivate_ram`
.. |Sequences.disk2ram| replace:: :func:`~hydpy.core.sequencetools.Sequences.disk2ram`
.. |Sequences.iosubsequences| replace:: :const:`~hydpy.core.sequencetools.Sequences.iosubsequences`
.. |Sequences.load_conditions| replace:: :func:`~hydpy.core.sequencetools.Sequences.load_conditions`
.. |Sequences.load_series| replace:: :func:`~hydpy.core.sequencetools.Sequences.load_series`
.. |Sequences.ram2disk| replace:: :func:`~hydpy.core.sequencetools.Sequences.ram2disk`
.. |Sequences.save_conditions| replace:: :func:`~hydpy.core.sequencetools.Sequences.save_conditions`
.. |Sequences.save_series| replace:: :func:`~hydpy.core.sequencetools.Sequences.save_series`
.. |Sequences.trim_conditions| replace:: :func:`~hydpy.core.sequencetools.Sequences.trim_conditions`
.. |Sequences| replace:: :class:`~hydpy.core.sequencetools.Sequences`
.. |Sim.load_ext| replace:: :func:`~hydpy.core.sequencetools.Sim.load_ext`
.. |Sim| replace:: :class:`~hydpy.core.sequencetools.Sim`
.. |StateSequence.new2old| replace:: :func:`~hydpy.core.sequencetools.StateSequence.new2old`
.. |StateSequence.new| replace:: :const:`~hydpy.core.sequencetools.StateSequence.new`
.. |StateSequence.old| replace:: :const:`~hydpy.core.sequencetools.StateSequence.old`
.. |StateSequence.shape| replace:: :const:`~hydpy.core.sequencetools.StateSequence.shape`
.. |StateSequence| replace:: :class:`~hydpy.core.sequencetools.StateSequence`
.. |SubParameters| replace:: :class:`~hydpy.core.parametertools.SubParameters`
.. |SubSequences| replace:: :class:`~hydpy.core.sequencetools.SubSequences`
.. |TestIO| replace:: :class:`~hydpy.core.testtools.TestIO`
.. |Timegrids.eval_| replace:: :attr:`~hydpy.core.timetools.Timegrids.eval_`
.. |Timegrids.sim| replace:: :attr:`~hydpy.core.timetools.Timegrids.sim`
.. |Timegrids| replace:: :class:`~hydpy.core.timetools.Timegrids`
.. |Timegrid| replace:: :class:`~hydpy.core.timetools.Timegrid`
.. |True| replace:: :const:`True`
.. |UserWarning| replace:: :class:`UserWarning`
.. |Variable.average_values| replace:: :func:`~hydpy.core.variabletools.Variable.average_values`
.. |Variable.shape| replace:: :const:`~hydpy.core.variabletools.Variable.shape`
.. |Variable.value| replace:: :const:`~hydpy.core.variabletools.Variable.value`
.. |Variable| replace:: :class:`~hydpy.core.variabletools.Variable`
.. |bool| replace:: :class:`bool`
.. |conv_v001| replace:: :mod:`~hydpy.models.conv_v001`
.. |dam| replace:: :mod:`~hydpy.models.dam`
.. |filetools| replace:: :mod:`~hydpy.core.filetools`
.. |float| replace:: :class:`float`
.. |hbranch_v1| replace:: :mod:`~hydpy.models.hbranch_v1`
.. |hland_v1| replace:: :mod:`~hydpy.models.hland_v1`
.. |hstream_v1| replace:: :mod:`~hydpy.models.hstream_v1`
.. |int| replace:: :class:`int`
.. |lland_v1| replace:: :mod:`~hydpy.models.lland_v1`
.. |lland_v2| replace:: :mod:`~hydpy.models.lland_v2`
.. |netcdftools| replace:: :mod:`~hydpy.core.netcdftools`
.. |numpy| replace:: :mod:`~numpy`
.. |pointerutils| replace:: :mod:`~hydpy.cythons.autogen.pointerutils`
.. |prepare_full_example_2| replace:: :func:`~hydpy.examples.prepare_full_example_2`
.. |prepare_io_example_1| replace:: :func:`~hydpy.examples.prepare_io_example_1`
.. |pub| replace:: :mod:`~hydpy.pub`
.. |sequencetools| replace:: :mod:`~hydpy.core.sequencetools`
.. |str| replace:: :class:`str`
.. |trim| replace:: :func:`~hydpy.core.variabletools.trim`
.. |tuple| replace:: :class:`tuple`
.. |variabletools| replace:: :mod:`~hydpy.core.variabletools`
.. |dam_fluxes.Inflow| replace:: :class:`~hydpy.models.dam.dam_fluxes.Inflow`
.. |dam_states.WaterVolume| replace:: :class:`~hydpy.models.dam.dam_states.WaterVolume`
.. |hbranch_outlets.Branched| replace:: :class:`~hydpy.models.hbranch.hbranch_outlets.Branched`
.. |hland_fluxes.EP| replace:: :class:`~hydpy.models.hland.hland_fluxes.EP`
.. |hland_fluxes.PC| replace:: :class:`~hydpy.models.hland.hland_fluxes.PC`
.. |hland_fluxes.TMean| replace:: :class:`~hydpy.models.hland.hland_fluxes.TMean`
.. |hland_inputs.P| replace:: :class:`~hydpy.models.hland.hland_inputs.P`
.. |hland_inputs.T| replace:: :class:`~hydpy.models.hland.hland_inputs.T`
.. |hland_states.SM| replace:: :class:`~hydpy.models.hland.hland_states.SM`
.. |hstream_inlets.Q| replace:: :class:`~hydpy.models.hstream.hstream_inlets.Q`
.. |hstream_outlets.Q| replace:: :class:`~hydpy.models.hstream.hstream_outlets.Q`
.. |io.open| replace:: :func:`~io.open`
.. |lland_fluxes.NKor| replace:: :class:`~hydpy.models.lland.lland_fluxes.NKor`
.. |lland_logs.WET0| replace:: :class:`~hydpy.models.lland.lland_logs.WET0`
.. |lland_states.BoWa| replace:: :class:`~hydpy.models.lland.lland_states.BoWa`
.. |lland_states.Inzp| replace:: :class:`~hydpy.models.lland.lland_states.Inzp`
.. |numpy.nan| replace:: :const:`~numpy.nan`
.. |numpy.ndarray| replace:: :class:`~numpy.ndarray`
.. |sequencetools.FastAccessIOSequence| replace:: :class:`~hydpy.core.sequencetools.FastAccessIOSequence`
.. |sequencetools.FastAccessNodeSequence.load_data| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.load_data`
.. |sequencetools.FastAccessNodeSequence.load_obsdata| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.load_obsdata`
.. |sequencetools.FastAccessNodeSequence.load_simdata| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.load_simdata`
.. |sequencetools.FastAccessNodeSequence.save_data| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.save_data`
.. |sequencetools.FastAccessNodeSequence.save_simdata| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.save_simdata`
.. |sequencetools.FastAccessNodeSequence| replace:: :class:`~hydpy.core.sequencetools.FastAccessNodeSequence`
.. |sequencetools.FluxSequences| replace:: :class:`~hydpy.core.sequencetools.FluxSequences`
.. |sequencetools.InputSequences| replace:: :class:`~hydpy.core.sequencetools.InputSequences`
.. |sequencetools.StateSequences| replace:: :class:`~hydpy.core.sequencetools.StateSequences`

.. _sequencetools:

sequencetools
=============

.. automodule:: hydpy.core.sequencetools
    :members:
    :show-inheritance:
    :exclude-members: CLASSES, RUN_METHODS, ADD_METHODS, INLET_METHODS, OUTLET_METHODS, RECEIVER_METHODS, SENDER_METHODS, PART_ODE_METHODS, FULL_ODE_METHODS, CONTROLPARAMETERS, DERIVEDPARAMETERS, FIXEDPARAMETERS, REQUIREDSEQUENCES, UPDATEDSEQUENCES, RESULTSEQUENCES, SOLVERPARAMETERS, SOLVERSEQUENCES, SUBMETHODS, SUBMODELS, fastaccess, fastaccess_new, fastaccess_old, pars, seqs
