5.0/_sources/sequencetools.rst.txt
.. |AideSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.AideSequence.subvars`
.. |AideSequence| replace:: :class:`~hydpy.core.sequencetools.AideSequence`
.. |ConditionSequence.reset| replace:: :func:`~hydpy.core.sequencetools.ConditionSequence.reset`
.. |ConditionSequence| replace:: :class:`~hydpy.core.sequencetools.ConditionSequence`
.. |DependentSequence.shape| replace:: :const:`~hydpy.core.sequencetools.DependentSequence.shape`
.. |Device| replace:: :class:`~hydpy.core.devicetools.Device`
.. |Double| replace:: :class:`~hydpy.cythons.autogen.pointerutils.Double`
.. |ELSModel| replace:: :class:`~hydpy.core.modeltools.ELSModel`
.. |Element| replace:: :class:`~hydpy.core.devicetools.Element`
.. |FactorSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.FactorSequence.subvars`
.. |FactorSequence| replace:: :class:`~hydpy.core.sequencetools.FactorSequence`
.. |False| replace:: :const:`False`
.. |FastAccessIOSequence.load_data| replace:: :func:`~hydpy.core.sequencetools.FastAccessIOSequence.load_data`
.. |FastAccessIOSequence.save_data| replace:: :func:`~hydpy.core.sequencetools.FastAccessIOSequence.save_data`
.. |FastAccessIOSequence| replace:: :class:`~hydpy.core.sequencetools.FastAccessIOSequence`
.. |FastAccessLinkSequence.alloc| replace:: :func:`~hydpy.core.sequencetools.FastAccessLinkSequence.alloc`
.. |FastAccessLinkSequence.dealloc| replace:: :func:`~hydpy.core.sequencetools.FastAccessLinkSequence.dealloc`
.. |FastAccessLinkSequence.set_pointer0d| replace:: :func:`~hydpy.core.sequencetools.FastAccessLinkSequence.set_pointer0d`
.. |FastAccessLinkSequence.set_pointer1d| replace:: :func:`~hydpy.core.sequencetools.FastAccessLinkSequence.set_pointer1d`
.. |FastAccessNodeSequence.fill_obsdata| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.fill_obsdata`
.. |FastAccessOutputSequence.update_outputs| replace:: :func:`~hydpy.core.sequencetools.FastAccessOutputSequence.update_outputs`
.. |FastAccessOutputSequence| replace:: :class:`~hydpy.core.sequencetools.FastAccessOutputSequence`
.. |FastAccess| replace:: :class:`~hydpy.core.variabletools.FastAccess`
.. |FileManager.currentpath| replace:: :const:`~hydpy.core.filetools.FileManager.currentpath`
.. |FluxSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.FluxSequence.subvars`
.. |FluxSequence| replace:: :class:`~hydpy.core.sequencetools.FluxSequence`
.. |HydPy.conditions| replace:: :const:`~hydpy.core.hydpytools.HydPy.conditions`
.. |HydPy.load_conditions| replace:: :func:`~hydpy.core.hydpytools.HydPy.load_conditions`
.. |HydPy.prepare_inputseries| replace:: :func:`~hydpy.core.hydpytools.HydPy.prepare_inputseries`
.. |HydPy| replace:: :class:`~hydpy.core.hydpytools.HydPy`
.. |IOSequence.adjust_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.adjust_series`
.. |IOSequence.adjust_short_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.adjust_short_series`
.. |IOSequence.aggregate_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.aggregate_series`
.. |IOSequence.aggregation| replace:: :const:`~hydpy.core.sequencetools.IOSequence.aggregation`
.. |IOSequence.average_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.average_series`
.. |IOSequence.descr_device| replace:: :const:`~hydpy.core.sequencetools.IOSequence.descr_device`
.. |IOSequence.descr_sequence| replace:: :const:`~hydpy.core.sequencetools.IOSequence.descr_sequence`
.. |IOSequence.dirpath| replace:: :const:`~hydpy.core.sequencetools.IOSequence.dirpath`
.. |IOSequence.diskflag_reading| replace:: :const:`~hydpy.core.sequencetools.IOSequence.diskflag_reading`
.. |IOSequence.diskflag_writing| replace:: :const:`~hydpy.core.sequencetools.IOSequence.diskflag_writing`
.. |IOSequence.diskflag| replace:: :const:`~hydpy.core.sequencetools.IOSequence.diskflag`
.. |IOSequence.filename| replace:: :const:`~hydpy.core.sequencetools.IOSequence.filename`
.. |IOSequence.filetype| replace:: :const:`~hydpy.core.sequencetools.IOSequence.filetype`
.. |IOSequence.load_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.load_series`
.. |IOSequence.memoryflag| replace:: :const:`~hydpy.core.sequencetools.IOSequence.memoryflag`
.. |IOSequence.overwrite| replace:: :const:`~hydpy.core.sequencetools.IOSequence.overwrite`
.. |IOSequence.prepare_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.prepare_series`
.. |IOSequence.ramflag| replace:: :const:`~hydpy.core.sequencetools.IOSequence.ramflag`
.. |IOSequence.save_series| replace:: :func:`~hydpy.core.sequencetools.IOSequence.save_series`
.. |IOSequence.seriesmatrix| replace:: :const:`~hydpy.core.sequencetools.IOSequence.seriesmatrix`
.. |IOSequence.seriesshape| replace:: :const:`~hydpy.core.sequencetools.IOSequence.seriesshape`
.. |IOSequence.series| replace:: :const:`~hydpy.core.sequencetools.IOSequence.series`
.. |IOSequence.shape| replace:: :const:`~hydpy.core.sequencetools.IOSequence.shape`
.. |IOSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.IOSequence.subvars`
.. |IOSequence.update_fastaccess| replace:: :func:`~hydpy.core.sequencetools.IOSequence.update_fastaccess`
.. |IOSequences.load_series| replace:: :func:`~hydpy.core.sequencetools.IOSequences.load_series`
.. |IOSequences.prepare_series| replace:: :func:`~hydpy.core.sequencetools.IOSequences.prepare_series`
.. |IOSequences| replace:: :class:`~hydpy.core.sequencetools.IOSequences`
.. |IOSequence| replace:: :class:`~hydpy.core.sequencetools.IOSequence`
.. |InfoArray| replace:: :class:`~hydpy.core.sequencetools.InfoArray`
.. |InletSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.InletSequence.subvars`
.. |InputSequence.set_pointer| replace:: :func:`~hydpy.core.sequencetools.InputSequence.set_pointer`
.. |InputSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.InputSequence.subvars`
.. |InputSequence| replace:: :class:`~hydpy.core.sequencetools.InputSequence`
.. |LinkSequence.set_pointer| replace:: :func:`~hydpy.core.sequencetools.LinkSequence.set_pointer`
.. |LinkSequence.shape| replace:: :const:`~hydpy.core.sequencetools.LinkSequence.shape`
.. |LinkSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.LinkSequence.subvars`
.. |LinkSequence.value| replace:: :const:`~hydpy.core.sequencetools.LinkSequence.value`
.. |LinkSequence| replace:: :class:`~hydpy.core.sequencetools.LinkSequence`
.. |LogSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.LogSequence.subvars`
.. |LogSequenceFixed.shape| replace:: :const:`~hydpy.core.sequencetools.LogSequenceFixed.shape`
.. |LogSequenceFixed| replace:: :class:`~hydpy.core.sequencetools.LogSequenceFixed`
.. |LogSequence| replace:: :class:`~hydpy.core.sequencetools.LogSequence`
.. |ModelIOSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.ModelIOSequence.subvars`
.. |ModelIOSequences.load_data| replace:: :func:`~hydpy.core.sequencetools.ModelIOSequences.load_data`
.. |ModelIOSequences.save_data| replace:: :func:`~hydpy.core.sequencetools.ModelIOSequences.save_data`
.. |ModelSequence.numericshape| replace:: :const:`~hydpy.core.sequencetools.ModelSequence.numericshape`
.. |ModelSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.ModelSequence.subvars`
.. |ModelSequences| replace:: :class:`~hydpy.core.sequencetools.ModelSequences`
.. |ModelSequence| replace:: :class:`~hydpy.core.sequencetools.ModelSequence`
.. |Model| replace:: :class:`~hydpy.core.modeltools.Model`
.. |NDArrayFloat| replace:: :const:`~hydpy.core.typingtools.NDArrayFloat`
.. |Node.deploymode| replace:: :const:`~hydpy.core.devicetools.Node.deploymode`
.. |Node.variable| replace:: :const:`~hydpy.core.devicetools.Node.variable`
.. |NodeSequence.seriescomplete| replace:: :const:`~hydpy.core.sequencetools.NodeSequence.seriescomplete`
.. |NodeSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.NodeSequence.subvars`
.. |NodeSequence.value| replace:: :const:`~hydpy.core.sequencetools.NodeSequence.value`
.. |NodeSequences.node| replace:: :attr:`~hydpy.core.sequencetools.NodeSequences.node`
.. |NodeSequences| replace:: :class:`~hydpy.core.sequencetools.NodeSequences`
.. |NodeSequence| replace:: :class:`~hydpy.core.sequencetools.NodeSequence`
.. |Node| replace:: :class:`~hydpy.core.devicetools.Node`
.. |None| replace:: :const:`None`
.. |Obs.load_series| replace:: :func:`~hydpy.core.sequencetools.Obs.load_series`
.. |Obs| replace:: :class:`~hydpy.core.sequencetools.Obs`
.. |Options.checkseries| replace:: :const:`~hydpy.core.optiontools.Options.checkseries`
.. |Options.usedefaultvalues| replace:: :const:`~hydpy.core.optiontools.Options.usedefaultvalues`
.. |Options.warnmissingobsfile| replace:: :const:`~hydpy.core.optiontools.Options.warnmissingobsfile`
.. |Options.warnmissingsimfile| replace:: :const:`~hydpy.core.optiontools.Options.warnmissingsimfile`
.. |OutletSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.OutletSequence.subvars`
.. |OutputSequence.outputflag| replace:: :const:`~hydpy.core.sequencetools.OutputSequence.outputflag`
.. |OutputSequence.set_pointer| replace:: :func:`~hydpy.core.sequencetools.OutputSequence.set_pointer`
.. |OutputSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.OutputSequence.subvars`
.. |OutputSequences.update_outputs| replace:: :func:`~hydpy.core.sequencetools.OutputSequences.update_outputs`
.. |OutputSequence| replace:: :class:`~hydpy.core.sequencetools.OutputSequence`
.. |PDouble| replace:: :class:`~hydpy.cythons.autogen.pointerutils.PDouble`
.. |PPDouble| replace:: :class:`~hydpy.cythons.autogen.pointerutils.PPDouble`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |ReceiverSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.ReceiverSequence.subvars`
.. |RuntimeError| replace:: :class:`RuntimeError`
.. |SenderSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.SenderSequence.subvars`
.. |SequenceManager.load_file| replace:: :func:`~hydpy.core.filetools.SequenceManager.load_file`
.. |SequenceManager.save_file| replace:: :func:`~hydpy.core.filetools.SequenceManager.save_file`
.. |SequenceManager| replace:: :class:`~hydpy.core.filetools.SequenceManager`
.. |Sequence_.NUMERIC| replace:: :attr:`~hydpy.core.sequencetools.Sequence_.NUMERIC`
.. |Sequence_.initinfo| replace:: :const:`~hydpy.core.sequencetools.Sequence_.initinfo`
.. |Sequence_.subvars| replace:: :attr:`~hydpy.core.sequencetools.Sequence_.subvars`
.. |Sequence_| replace:: :class:`~hydpy.core.sequencetools.Sequence_`
.. |Sequences.conditionsequences| replace:: :const:`~hydpy.core.sequencetools.Sequences.conditionsequences`
.. |Sequences.factors| replace:: :attr:`~hydpy.core.sequencetools.Sequences.factors`
.. |Sequences.fluxes| replace:: :attr:`~hydpy.core.sequencetools.Sequences.fluxes`
.. |Sequences.inputs| replace:: :attr:`~hydpy.core.sequencetools.Sequences.inputs`
.. |Sequences.iosubsequences| replace:: :const:`~hydpy.core.sequencetools.Sequences.iosubsequences`
.. |Sequences.load_conditions| replace:: :func:`~hydpy.core.sequencetools.Sequences.load_conditions`
.. |Sequences.load_series| replace:: :func:`~hydpy.core.sequencetools.Sequences.load_series`
.. |Sequences.prepare_series| replace:: :func:`~hydpy.core.sequencetools.Sequences.prepare_series`
.. |Sequences.save_conditions| replace:: :func:`~hydpy.core.sequencetools.Sequences.save_conditions`
.. |Sequences.save_series| replace:: :func:`~hydpy.core.sequencetools.Sequences.save_series`
.. |Sequences.states| replace:: :attr:`~hydpy.core.sequencetools.Sequences.states`
.. |Sequences.trim_conditions| replace:: :func:`~hydpy.core.sequencetools.Sequences.trim_conditions`
.. |Sequences| replace:: :class:`~hydpy.core.sequencetools.Sequences`
.. |Sim.load_series| replace:: :func:`~hydpy.core.sequencetools.Sim.load_series`
.. |Sim| replace:: :class:`~hydpy.core.sequencetools.Sim`
.. |StateSequence.new2old| replace:: :func:`~hydpy.core.sequencetools.StateSequence.new2old`
.. |StateSequence.new| replace:: :const:`~hydpy.core.sequencetools.StateSequence.new`
.. |StateSequence.old| replace:: :const:`~hydpy.core.sequencetools.StateSequence.old`
.. |StateSequence.shape| replace:: :const:`~hydpy.core.sequencetools.StateSequence.shape`
.. |StateSequence.subvars| replace:: :attr:`~hydpy.core.sequencetools.StateSequence.subvars`
.. |StateSequence| replace:: :class:`~hydpy.core.sequencetools.StateSequence`
.. |SubParameters| replace:: :class:`~hydpy.core.parametertools.SubParameters`
.. |SubSequences| replace:: :class:`~hydpy.core.sequencetools.SubSequences`
.. |TestIO| replace:: :class:`~hydpy.core.testtools.TestIO`
.. |Timegrids.eval_| replace:: :attr:`~hydpy.core.timetools.Timegrids.eval_`
.. |Timegrids.init| replace:: :attr:`~hydpy.core.timetools.Timegrids.init`
.. |Timegrids.sim| replace:: :attr:`~hydpy.core.timetools.Timegrids.sim`
.. |Timegrids| replace:: :class:`~hydpy.core.timetools.Timegrids`
.. |Timegrid| replace:: :class:`~hydpy.core.timetools.Timegrid`
.. |True| replace:: :const:`True`
.. |UserWarning| replace:: :class:`UserWarning`
.. |Variable.average_values| replace:: :func:`~hydpy.core.variabletools.Variable.average_values`
.. |Variable.shape| replace:: :const:`~hydpy.core.variabletools.Variable.shape`
.. |Variable.value| replace:: :const:`~hydpy.core.variabletools.Variable.value`
.. |Variable| replace:: :class:`~hydpy.core.variabletools.Variable`
.. |bool| replace:: :class:`bool`
.. |conv_v001| replace:: :mod:`~hydpy.models.conv_v001`
.. |dam| replace:: :mod:`~hydpy.models.dam`
.. |filetools| replace:: :mod:`~hydpy.core.filetools`
.. |float| replace:: :class:`float`
.. |hbranch_v1| replace:: :mod:`~hydpy.models.hbranch_v1`
.. |hland_v1| replace:: :mod:`~hydpy.models.hland_v1`
.. |int| replace:: :class:`int`
.. |lland_v1| replace:: :mod:`~hydpy.models.lland_v1`
.. |lland_v2| replace:: :mod:`~hydpy.models.lland_v2`
.. |musk_classic| replace:: :mod:`~hydpy.models.musk_classic`
.. |netcdftools| replace:: :mod:`~hydpy.core.netcdftools`
.. |numpy| replace:: :mod:`~numpy`
.. |pointerutils| replace:: :mod:`~hydpy.cythons.autogen.pointerutils`
.. |prepare_full_example_2| replace:: :func:`~hydpy.examples.prepare_full_example_2`
.. |prepare_io_example_1| replace:: :func:`~hydpy.examples.prepare_io_example_1`
.. |pub| replace:: :mod:`~hydpy.pub`
.. |sequencetools| replace:: :mod:`~hydpy.core.sequencetools`
.. |trim| replace:: :func:`~hydpy.core.variabletools.trim`
.. |tuple| replace:: :class:`tuple`
.. |variabletools| replace:: :mod:`~hydpy.core.variabletools`
.. |wland| replace:: :mod:`~hydpy.models.wland`
.. |dam_fluxes.Inflow| replace:: :class:`~hydpy.models.dam.dam_fluxes.Inflow`
.. |dam_logs.LoggedRequiredRemoteRelease| replace:: :class:`~hydpy.models.dam.dam_logs.LoggedRequiredRemoteRelease`
.. |hbranch_outlets.Branched| replace:: :class:`~hydpy.models.hbranch.hbranch_outlets.Branched`
.. |hland_factors.TC| replace:: :class:`~hydpy.models.hland.hland_factors.TC`
.. |hland_factors.TMean| replace:: :class:`~hydpy.models.hland.hland_factors.TMean`
.. |hland_fluxes.PC| replace:: :class:`~hydpy.models.hland.hland_fluxes.PC`
.. |hland_inputs.P| replace:: :class:`~hydpy.models.hland.hland_inputs.P`
.. |hland_inputs.T| replace:: :class:`~hydpy.models.hland.hland_inputs.T`
.. |hland_states.SM| replace:: :class:`~hydpy.models.hland.hland_states.SM`
.. |hland_states.SP| replace:: :class:`~hydpy.models.hland.hland_states.SP`
.. |lland_fluxes.NKor| replace:: :class:`~hydpy.models.lland.lland_fluxes.NKor`
.. |lland_logs.WET0| replace:: :class:`~hydpy.models.lland.lland_logs.WET0`
.. |lland_states.BoWa| replace:: :class:`~hydpy.models.lland.lland_states.BoWa`
.. |lland_states.Inzp| replace:: :class:`~hydpy.models.lland.lland_states.Inzp`
.. |musk_inlets.Q| replace:: :class:`~hydpy.models.musk.musk_inlets.Q`
.. |musk_outlets.Q| replace:: :class:`~hydpy.models.musk.musk_outlets.Q`
.. |numpy.nan| replace:: :const:`~numpy.nan`
.. |numpy.ndarray| replace:: :class:`~numpy.ndarray`
.. |sequencetools.FactorSequences| replace:: :class:`~hydpy.core.sequencetools.FactorSequences`
.. |sequencetools.FastAccessIOSequence| replace:: :class:`~hydpy.core.sequencetools.FastAccessIOSequence`
.. |sequencetools.FastAccessNodeSequence.load_data| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.load_data`
.. |sequencetools.FastAccessNodeSequence.load_obsdata| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.load_obsdata`
.. |sequencetools.FastAccessNodeSequence.load_simdata| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.load_simdata`
.. |sequencetools.FastAccessNodeSequence.save_data| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.save_data`
.. |sequencetools.FastAccessNodeSequence.save_obsdata| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.save_obsdata`
.. |sequencetools.FastAccessNodeSequence.save_simdata| replace:: :func:`~hydpy.core.sequencetools.FastAccessNodeSequence.save_simdata`
.. |sequencetools.FastAccessNodeSequence| replace:: :class:`~hydpy.core.sequencetools.FastAccessNodeSequence`
.. |sequencetools.FluxSequences| replace:: :class:`~hydpy.core.sequencetools.FluxSequences`
.. |sequencetools.InputSequences| replace:: :class:`~hydpy.core.sequencetools.InputSequences`
.. |sequencetools.StateSequences| replace:: :class:`~hydpy.core.sequencetools.StateSequences`
.. |wland_fluxes.EI| replace:: :class:`~hydpy.models.wland.wland_fluxes.EI`
.. |wland_fluxes.RH| replace:: :class:`~hydpy.models.wland.wland_fluxes.RH`
.. |wland_states.HS| replace:: :class:`~hydpy.models.wland.wland_states.HS`
.. |wland_states.IC| replace:: :class:`~hydpy.models.wland.wland_states.IC`

.. _sequencetools:

sequencetools
=============

.. automodule:: hydpy.core.sequencetools
    :members:
    :show-inheritance:
    :exclude-members: Self, Reversible, Generic, Sized, Awaitable, IntVar, clear_overloads, TypeAlias, Sequence, Hashable, SUBMETHODS, SupportsAbs, AnyStr, assert_never, reveal_type, CLASSES, REQUIREDSEQUENCES, ItemsView, Union, SupportsFloat, get_overloads, get_origin, OUTLET_METHODS, NoReturn, no_type_check, Type, Final, PART_ODE_METHODS, RECEIVER_METHODS, Tuple, AbstractSet, ByteString, MappingView, subpars, MutableSequence, MutableSet, SupportsRound, CONTROLPARAMETERS, INLET_METHODS, get_protocol_members, SOLVERSEQUENCES, FrozenSet, no_type_check_decorator, fastaccess_old, Mapping, FIXEDPARAMETERS, seqs, KeysView, SUBMODELS, Protocol, SupportsComplex, SENDER_METHODS, ContextManager, deprecated, SupportsBytes, get_original_bases, Iterator, is_protocol, TypeGuard, DefaultDict, LiteralString, Required, TextIO, TYPE_CHECKING, AsyncContextManager, fastaccess_new, FULL_ODE_METHODS, SOLVERPARAMETERS, BinaryIO, fastaccess, runtime, IO, Text, TypeVarTuple, ValuesView, AsyncIterable, Generator, Optional, assert_type, Literal, dataclass_transform, subvars, pars, get_args, ParamSpec, Annotated, cast, final, subseqs, ClassVar, Any, Unpack, Coroutine, is_typeddict, Counter, UPDATEDSEQUENCES, Callable, Dict, NamedTuple, overload, OrderedDict, Set, ADD_METHODS, Collection, Pattern, List, get_type_hints, Concatenate, ParamSpecKwargs, DERIVEDPARAMETERS, AsyncGenerator, override, Container, RUN_METHODS, NotRequired, NewType, RESULTSEQUENCES, SupportsInt, Buffer, Iterable, TypeVar, SupportsIndex, MutableMapping, ChainMap, ForwardRef, TypeAliasType, AsyncIterator, Never, ParamSpecArgs, Match, Deque, TypedDict, runtime_checkable
